[package]
name = "rust-smtp"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

[lib]
name="nibbler"
path="src/lib.rs"

[[bin]]
name="smtp"
path="src/main.rs"

[dependencies]
log = "0.3.6"
lettre = "0.5"
email = {git = "https://github.com/niax/rust-email", version="0.0.13"}
